force-app/main/default/objects/SA_Contact_Team_Member__c/SA_Contact_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Contact Team Member</label>
    <nameField>
        <displayFormat>CTM-{00000}</displayFormat>
        <label>Contact Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>