force-app/main/default/objects/SA_Contact_Team_Member__c/fields/CompositeKey__c.field-meta.xml
<CustomField>
    <fullName>CompositeKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Stores the SA_User__c &amp; SA_Contact__c as a composite key that uniquely identifies the record

Case C-00006167 2012-12-07 C Reinecke Contact Team Enhancements</description>
    <label>CompositeKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>