force-app/main/default/objects/SA_Contact_Team_Member__c/fields/Primary_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to specify The Primary Contact Person for the Contact within the Contact Team</description>
    <inlineHelpText>Used to specify The Primary Contact Person for the Contact within the Contact Team</inlineHelpText>
    <label>Primary Contact Person</label>
    <type>Checkbox</type>
</CustomField>