force-app/main/default/objects/SA_Contact_Team_Member__c/fields/SA_Contact__c.field-meta.xml
<CustomField>
    <fullName>SA_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Team Members</relationshipLabel>
    <relationshipName>Contact_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>