force-app/main/default/objects/SA_Contact_Team_Member__c/fields/SA_Hierarchy_Role__c.field-meta.xml
<CustomField>
    <fullName>SA_Hierarchy_Role__c</fullName>
    <formula>SA_User__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy Role</label>
    <type>Text</type>
</CustomField>