force-app/main/default/objects/SA_Contact_Team_Member__c/fields/SA_User__c.field-meta.xml
<CustomField>
    <fullName>SA_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contact_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>