force-app/main/default/objects/SA_Contact_Team_Member__c/fields/User_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>User_Business_Unit__c</fullName>
    <description>Case C-00006167 2012-12-07 C Reinecke Contact Team Enhancements</description>
    <formula>TEXT(SA_User__r.Business_Unit__c)</formula>
    <label>User Business Unit</label>
    <type>Text</type>
</CustomField>