force-app/main/default/objects/SA_Contact_Team_Member__c/fields/User_CIB_Global_Area__c.field-meta.xml
<CustomField>
    <fullName>User_CIB_Global_Area__c</fullName>
    <description>Case C-00006167 2012-12-07 C Reinecke Contact Team Enhancements</description>
    <formula>Text(SA_User__r.User_CIB_Global_Area__c)</formula>
    <label>User CIB Global Area</label>
    <type>Text</type>
</CustomField>