force-app/main/default/objects/SA_Contact_Team_Member__c/fields/User_City__c.field-meta.xml
<CustomField>
    <fullName>User_City__c</fullName>
    <description>Case C-00006167 2012-12-07 C Reinecke Contact Team Enhancements</description>
    <formula>SA_User__r.User_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User City</label>
    <type>Text</type>
</CustomField>