force-app/main/default/objects/SA_Contact_Team_Member__c/fields/User_Country__c.field-meta.xml
<CustomField>
    <fullName>User_Country__c</fullName>
    <description>Case C-00006167 2012-12-07 C Reinecke Contact Team Enhancements</description>
    <formula>SA_User__r.User_Country__c</formula>
    <label>User Country</label>
    <type>Text</type>
</CustomField>