force-app/main/default/objects/SA_Contact_Team_Member__c/fields/User_Team__c.field-meta.xml
<CustomField>
    <fullName>User_Team__c</fullName>
    <description>Case C-00006167 2012-12-07 C Reinecke Contact Team Enhancements</description>
    <formula>TEXT(SA_User__r.User_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Team</label>
    <type>Text</type>
</CustomField>